--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,6 @@ body {
 	background-color: #fff;
 }
 #main,
-#main .wrapper,
-#main .container { 
+#main .wrapper { 
 	min-height: 100%;
 }
