--- a/src/sections/grid.scss
+++ b/src/sections/grid.scss
@@ -20,7 +20,6 @@ nav ul {
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
   grid-gap: 20px;
-  height: 100%;  
 }
 
 .container > * {
